--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,6 @@
-<p>This is the partial for view 1.</p>
+<wc-maker class="" id="my-maker-1" uparam="{from:'Mel Heravi', to:'You', link:'http://www.melify.com'}" header="I AM A <u>DEFAULT</u> TEMPLATE">
+    <!-- "uparam" RETURNED IN SUBSCRIPTION -->
+    <h4><i class="fa fa-info-circle"></i> Used by maker to create consistent components</h4>
+    <p>you can click on me to get a callback</p>
+</wc-maker>
+
