--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,6 +1,9 @@
-<wc-maker class="" id="my-maker-1" uparam="{from:'Mel Heravi', to:'You', link:'http://www.melify.com'}" header="I AM A <u>DEFAULT</u> TEMPLATE">
-    <!-- "uparam" RETURNED IN SUBSCRIPTION -->
-    <h4><i class="fa fa-info-circle"></i> Used by maker to create consistent components</h4>
-    <p>you can click on me to get a callback</p>
-</wc-maker>
-
+<div id="wc">
+    <wc-maker class="" id="my-maker-1" uparam="{from:'Mel Heravi', to:'You', link:'http://www.melify.com'}" header="I AM A <u>DEFAULT</u> TEMPLATE">
+	<wc-maker class="" id="my-maker-1" uparam="{from:'Mel Heravi', to:'You', link:'http://www.melify.com'}" header="I AM A <u>DEFAULT</u> TEMPLATE">
+	    <!-- "uparam" RETURNED IN SUBSCRIPTION -->
+	    <h4><i class="fa fa-info-circle"></i> Used by maker to create consistent components</h4>
+	    <p>you can click on me to get a callback</p>
+	</wc-maker>
+    </wc-maker>
+</div>
