--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 
   <div ng-view></div>
 
+  <hr>
   <div>Angular seed app: v<span app-version></span></div>
 
   <!-- In production use:
@@ -34,6 +35,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
+  <script src="bundle.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
