--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,20 +1,47 @@
 <div id="wc">
-    <wc-card id="my-card-1" class="col-md-4">
-	<wc-card-header>
-	    Card Header (image top)
-	</wc-card-header>
+    <div class="container">
+	<div class="row">
+	    <div class="col-md-6">
+		<wc-card id="my-card-1">
+		    <wc-card-header>
+			Card Header (image top)
+		    </wc-card-header>
 
-	<wc-card-img position="top">
-	    <img src="http://localhost/Melify/mtk/dev/tk/lib/components/w/img/tmp/12s.jpg" width="100%">
-	</wc-card-img>
+		    <wc-card-img position="top">
+			<img src="http://localhost/Melify/mtk/dev/tk/lib/components/w/img/tmp/12s.jpg" width="100%">
+		    </wc-card-img>
 
-	<wc-card-body>
-	    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt 
-	    sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren
-	</wc-card-body>
+		    <wc-card-body>
+			Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt 
+			sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren
+		    </wc-card-body>
 
-	<wc-card-footer>
-	    Card Footer
-	</wc-card-footer>
-    </wc-card>
+		    <wc-card-footer>
+			Card Footer
+		    </wc-card-footer>
+		</wc-card>
+	    </div>
+
+	    <div class="col-md-6">
+		<wc-card id="my-card-2">
+		    <wc-card-header>
+			Card Header (image bottom)
+		    </wc-card-header>
+
+		    <wc-card-img position="bot">
+			<img src="http://localhost/Melify/mtk/dev/tk/lib/components/w/img/tmp/12s.jpg" width="100%">
+		    </wc-card-img>
+
+		    <wc-card-body>
+			Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt 
+			sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren
+		    </wc-card-body>
+
+		    <wc-card-footer>
+			Card Footer
+		    </wc-card-footer>
+		</wc-card>
+	    </div>
+	</div>
+    </div>
 </div>
