--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 	<ul class="menu" style="padding:25px;">
 	    <li><a href="#!/view1"><b>Carousel</b></a></li>
 	    <li><a href="#!/view2"><b>Card</b></a></li>
+	    <li><a href="#!/view3"><b>Form Elements</b></a></li>
 	</ul>
 
 	<!--[if lt IE 7]>
@@ -39,6 +40,7 @@
 	<script src="bundle.js"></script>
 	<script src="view1/view1.js"></script>
 	<script src="view2/view2.js"></script>
+	<script src="view3/view3.js"></script>
 	<script src="components/version/version.js"></script>
 	<script src="components/version/version-directive.js"></script>
 	<script src="components/version/interpolate-filter.js"></script>
