--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 	<ul class="menu" style="padding:25px;">
 	    <li><a href="#!/view1"><b>Carousel</b></a></li>
 	    <li><a href="#!/view2"><b>Card</b></a></li>
-	    <li><a href="#!/view3"><b>Form Elements</b></a></li>
+	    <li><a href="#!/view3"><b>Form</b></a></li>
 	</ul>
 
 	<!--[if lt IE 7]>
