--- a/app/index.html
+++ b/app/index.html
@@ -13,32 +13,38 @@
 	<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
 	<link rel="stylesheet" href="app.css">
 	<script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+	<script src="bundle.js"></script>
     </head>
 
     <body>
-	<ul class="menu" style="padding:25px;">
-	    <li><a href="#!/view1"><b>Carousel</b></a></li>
-	    <li><a href="#!/view2"><b>Card</b></a></li>
-	    <li><a href="#!/view3"><b>Form</b></a></li>
-	</ul>
-
-	<!--[if lt IE 7]>
-	    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-	<![endif]-->
-
+	<div class="container">
+	    <div class="row">
+		<div class="col-md-12">
+		    <ul class="menu">
+			<li><a href="#!/view1" class="btn btn-outline-primary">Carousel</a></li>
+			<li><a href="#!/view2" class="btn btn-outline-danger">Card</a></li>
+			<li><a href="#!/view3" class="btn btn-outline-success">Form</a></li>
+		    </ul>
+		</div>
+	    </div>
+	</div>
+	
 	<div ng-view></div>
 
-	<hr>
-	<ul style="padding:25px;">
-	    Angular seed app: v<span app-version></span>
-	</ul>
+	<div class="container" style="margin-top:20px;">
+	    <div class="row">
+		<div class="col-md-12" style="color:#999">
+		    ANGULAR + MEL'S WEB COMPONENTS 
+		</div>
+	    </div>
+	</div>
+	
 	<!-- In production use:
 	     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 	-->
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="app.js"></script>
-	<script src="bundle.js"></script>
 	<script src="view1/view1.js"></script>
 	<script src="view2/view2.js"></script>
 	<script src="view3/view3.js"></script>
