--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>My AngularJS App</title>
-	<meta name="description" content="">
+	<title>W3C Components + Angular</title>
+	<meta name="description" content="ANGULAR + MEL'S WEB COMPONENTS">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
 	<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
