--- a/app/index.html
+++ b/app/index.html
@@ -19,19 +19,10 @@
     </head>
 
     <body>
-	<div ng-view></div>
-
-	<div class="container" style="margin-top:20px;">
-	    <div class="row">
-		<div class="col-md-12" style="color:#999">
-		    ANGULAR + MEL'S WEB COMPONENTS 
-		</div>
-	    </div>
+	<div ng-view>
+	    <!-- VIEW1 CONTENT GOES HERE -->
 	</div>
 	
-	<!-- In production use:
-	     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-	-->
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="app.js"></script>
