--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 	<title>W3C Components + Angular</title>
 	<meta name="description" content="ANGULAR + MEL'S WEB COMPONENTS">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="./favicon.ico">
 	<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
 	<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
 	<link rel="stylesheet" href="app.css">
