--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -2,20 +2,31 @@
     <h1 align="center">ANGULAR + W3C WEB COMPONENTS</h1>
     <hr/>
 
-    	<div class="container">
-	    <div class="row">
-		<div class="col-md-12">
-		    <div class="lg">
-			<wc-dropdown id="my-dropdown" title="My Dropdown" width="180px" type="btn-outline-danger">
-			    <a class="dropdown-item" href="#">Action</a>
-			    <a class="dropdown-item" href="#">Another action</a>
-			    <a class="dropdown-item" href="#">Something else here</a>
-			</wc-dropdown>
+    	<style>
+	 .container, .container-fluid {
+	     max-width: 1400px!important;
+	 }
+	 .banner {
+	     background: url(/tk/img/media/backgorunds/1.jpg) no-repeat;
+	     background-size: 100% 100%;
+	     background-attachment: fixed;
+	     background-position: center; 
+	 }
+	</style>
+
+	<div class="bg-info text-dark banner">
+	    <div class="container-fluid">
+		<div class="row">
+		    <div class="col-md-12" style="height:150px;">
+			<h2 style="line-height:150px;" class="text-uppercase text-success wc-far">Virtual <small>- warehouse</small></h2>
 		    </div>
 		</div>
 	    </div>
 	</div>
-<hr/>
+
+	<wc-warehouse id="my-warehouse">
+	    Loading...
+	</wc-warehouse>
 
 </div>
 
