--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
 	<link rel="stylesheet" href="app.css">
 	<script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-	<script src="wc.bundle.js"></script>
+	<script src="bundle.js"></script>
     </head>
 
     <body>
