--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,8 +1,17 @@
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="http://links.melify.com/Melify/fonts/fonts.remote.css" rel="stylesheet" crossorigin="anonymous">
+
 <div id="wc">
-    <h1 align="center">ANGULAR + W3C WEB COMPONENTS</h1>
-    <hr/>
+    <div class="m-5">
+	<div class="container-fluid">
+	    <div class="row">
+		<div class="col-md-6">
+		    
+		</div>
+	    </div>
+	</div>
 
-    		    <wc-accordion id="my-accordion-1" cfg="/tk/lib/components/w/data/accordion.json" show="1"></wc-accordion>
-
+	<wc-accordion id="my-accordion-1" cfg="http://links.melify.com/tk/lib/components/w/data/accordion.react.json" show="1"></wc-accordion>
+    </div>
 </div>
 
