--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,5 +1,5 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="http://links.melify.com/Melify/fonts/fonts.remote.css" rel="stylesheet" crossorigin="anonymous">
+<link href="/fonts/fonts.css" rel="stylesheet" crossorigin="anonymous">
 
 <div id="wc">
     <div class="m-5">
