--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,4 +1,5 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 <link href="/fonts/fonts.css" rel="stylesheet" crossorigin="anonymous">
 
 <div id="wc">
