--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,18 +1,14 @@
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-<link href="/fonts/fonts.css" rel="stylesheet" crossorigin="anonymous">
-
 <div id="wc">
     <div class="m-5">
 	<div class="container-fluid">
 	    <div class="row">
 		<div class="col-md-6">
-		    
+		    <h1 class="text-uppercase mb-4">dev console has many goodies</h1>
+
+		    <wc-accordion id="my-accordion-1" cfg="http://links.melify.com/tk/lib/components/w/data/accordion.react.json" show="1"></wc-accordion>
 		</div>
 	    </div>
 	</div>
-
-	<wc-accordion id="my-accordion-1" cfg="http://links.melify.com/tk/lib/components/w/data/accordion.react.json" show="1"></wc-accordion>
     </div>
 </div>
 
