--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,17 @@
 	<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
 	<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
 	<link rel="stylesheet" href="app.css">
+
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="/fonts/fonts.css" rel="stylesheet">
+
 	<script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+
+	<script>
+	 // REMOVE TO STOP CONSOLE LOGS
+	 var wcENV = "dev";
+	</script>
+
 	<script src="wc.bundle.js"></script>
     </head>
 
