--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -5,7 +5,7 @@
 		<div class="col-md-6">
 		    <h1 class="text-uppercase mb-4">dev console has many goodies</h1>
 
-		    <wc-accordion id="my-accordion-1" cfg="http://links.melify.com/tk/lib/components/w/data/accordion.react.json" show="1"></wc-accordion>
+		    <wc-accordion id="my-accordion-1" cfg="/data/accordion.json" show="1"></wc-accordion>
 		</div>
 	    </div>
 	</div>
