--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -2,6 +2,8 @@
     <div class="container">
 	<div class="row">
 	    <div class="col-md-6 mt-5">
+		<h1 class=>CARD COMPONENT</h1>
+
 		<wc-card id="my-card-1">
 		    <wc-card-header>
 			Card Header (image top)
@@ -24,3 +26,4 @@
 	</div>
     </div>
 </div>
+
