--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,12 +1,21 @@
 <div id="wc">
-    <div class="m-5">
-	<div class="container-fluid">
-	    <div class="row">
-		<div class="col-md-6">
-		    <h1 class="text-uppercase mb-4">dev console has many goodies</h1>
+    <div class="container">
+	<div class="row">
+	    <div class="col-md-6 mt-5">
+		<h1>CARD COMPONENT</h1>
 
-		    <wc-accordion id="my-accordion-1" cfg="/data/accordion.json" show="1"></wc-accordion>
-		</div>
+		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view1.html">Accordion</a>
+		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view2.html">Card</a>
+	    </div>
+	</div>	    
+    </div>
+
+    <div class="container-fluid">
+	<div class="row">
+	    <div class="col-md-6 mt-5">
+		<h1 class="text-uppercase mb-4">dev console has many goodies</h1>
+		
+		<wc-accordion id="my-accordion-1" cfg="/data/accordion.json" show="1"></wc-accordion>
 	    </div>
 	</div>
     </div>
