--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -2,8 +2,17 @@
     <div class="container">
 	<div class="row">
 	    <div class="col-md-6 mt-5">
-		<h1 class=>CARD COMPONENT</h1>
-
+		<h1>CARD COMPONENT</h1>
+		
+		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view1.html">Accordion</a>
+		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view2.html">Card</a>
+	    </div>
+	</div>	    
+    </div>
+    
+    <div class="container">
+	<div class="row">
+	    <div class="col-md-6 mt-5">
 		<wc-card id="my-card-1">
 		    <wc-card-header>
 			Card Header (image top)
@@ -26,4 +35,3 @@
 	</div>
     </div>
 </div>
-
