--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,21 +1,20 @@
 <div id="wc">
     <div class="container">
 	<div class="row">
-	    <div class="col-md-6 mt-5">
+	    <div class="col-md-12 mt-5">
 		<h1>CARD COMPONENT</h1>
 
 		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view1.html">Accordion</a>
-		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view2.html">Card</a>
+		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view2">Card</a>
 	    </div>
 	</div>	    
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
 	<div class="row">
-	    <div class="col-md-6 mt-5">
-		<h1 class="text-uppercase mb-4">dev console has many goodies</h1>
-		
+	    <div class="col-md-8 mt-5">
 		<wc-accordion id="my-accordion-1" cfg="/data/accordion.json" show="1"></wc-accordion>
+		<h5 class="text-uppercase mb-4 text-danger">dev console has many goodies</h5>
 	    </div>
 	</div>
     </div>
