--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -4,15 +4,15 @@
 	    <div class="col-md-6 mt-5">
 		<h1>CARD COMPONENT</h1>
 		
-		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view1.html">Accordion</a>
-		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view2.html">Card</a>
+		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view1">Accordion</a>
+		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view2">Card</a>
 	    </div>
 	</div>	    
     </div>
     
     <div class="container">
 	<div class="row">
-	    <div class="col-md-6 mt-5">
+	    <div class="col-md-8 mt-5">
 		<wc-card id="my-card-1">
 		    <wc-card-header>
 			Card Header (image top)
