--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,22 +1,9 @@
 <div id="wc">
-    <div class="container">
-	<div class="row">
-	    <div class="col-md-12 mt-5">
-		<h1>CARD COMPONENT</h1>
+    <h1 align="center">ANGULAR + W3C WEB COMPONENTS</h1>
+    <hr/>
 
-		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view1.html">Accordion</a>
-		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view2">Card</a>
-	    </div>
-	</div>	    
-    </div>
+    		    <wc-accordion id="my-accordion-1" cfg="/tk/lib/components/w/data/accordion.json" show="1"></wc-accordion>
+		    <wc-card id="my-card-2" cfg="/tk/lib/components/w/cfg/cards/card-2.json"></wc-card>
 
-    <div class="container">
-	<div class="row">
-	    <div class="col-md-8 mt-5">
-		<wc-accordion id="my-accordion-1" cfg="/data/accordion.json" show="1"></wc-accordion>
-		<h5 class="text-uppercase mb-4 text-danger">dev console has many goodies</h5>
-	    </div>
-	</div>
-    </div>
 </div>
 
