--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -2,7 +2,7 @@
     <div class="container">
 	<div class="row">
 	    <div class="col-md-6 mt-5">
-		<h1>CARD COMPONENT</h1>
+		<h1>W3C COMPONENT SAMPLER</h1>
 		
 		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view1">Accordion</a>
 		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view2">Card</a>
