--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,3 +1,5 @@
+<link href="http://links.melify.com/Melify/mtk/dev/tk/lib/components/w/dist/wc.css" rel="stylesheet">
+
 <div id="wc">
     <div class="container">
 	<div class="row">
@@ -13,24 +15,7 @@
     <div class="container">
 	<div class="row">
 	    <div class="col-md-8 mt-5">
-		<wc-card id="my-card-1">
-		    <wc-card-header>
-			Card Header (image top)
-		    </wc-card-header>
-
-		    <wc-card-img position="top">
-			<img src="http://localhost/Melify/mtk/dev/tk/lib/components/w/img/tmp/12s.jpg" width="100%">
-		    </wc-card-img>
-
-		    <wc-card-body>
-			Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt 
-			sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren
-		    </wc-card-body>
-
-		    <wc-card-footer>
-			Card Footer
-		    </wc-card-footer>
-		</wc-card>
+		<wc-card id="my-card-2" cfg="/data/card.json"></wc-card>
 	    </div>
 	</div>
     </div>
