--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -4,7 +4,7 @@
 	    <div class="col-md-12 mt-5">
 		<h1>W3C COMPONENT SAMPLER</h1>
 
-		<a class="btn btn-outline-dark" style="width:120px" href="#!/view1/view1.html">Accordion</a>
+		<a class="btn btn-outline-dark active" style="width:120px" href="#!/view1/view1.html">Accordion</a>
 		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view2">Card</a>
 	    </div>
 	</div>	    
