--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -7,7 +7,7 @@
 		<h1>W3C COMPONENT SAMPLER</h1>
 		
 		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view1">Accordion</a>
-		<a class="btn btn-outline-dark" style="width:120px" href="/#!/view2">Card</a>
+		<a class="btn btn-outline-dark active" style="width:120px" href="/#!/view2">Card</a>
 	    </div>
 	</div>	    
     </div>
