--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>W3C Components + Angular</title>
+	<title>Angular W3C Sampler</title>
 	<meta name="description" content="ANGULAR + MEL'S WEB COMPONENTS">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="./favicon.ico">
